04-workload-specific-evaluations/04-05-Speech-to-Speech/sample_s2s_app/python-server/telemetry.log
Warning: .env file not found
  File "server.py", line 41
    f"Health check request received from {client_ip} for path: {self.path}"
                                                                          ^
SyntaxError: invalid syntax
